--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
   - id: check-toml
 
 - repo: https://github.com/python-poetry/poetry
-  rev: "1.4.2"
+  rev: "1.7.1"
   hooks:
   - id: poetry-check
   - id: poetry-lock
@@ -18,7 +18,7 @@ repos:
   - id: poetry-export
     args: ["-f", "requirements.txt", "-o", "requirements.txt", "--without-hashes"]
   - id: poetry-export
-    args: ["--with", "dev", "-f", "requirements.txt", "-o", "requirements-dev.txt", "--without-hashes"]
+    args: ["--with=dev", "-f", "requirements.txt", "-o", "requirements-dev.txt", "--without-hashes"]
 
 - repo: local
   hooks:
@@ -31,7 +31,6 @@ repos:
     name: formatting::isort
     entry: isort
     language: system
-    types: [python]
   - id: flake8
     name: linting::flake8
     entry: flake8
