--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,14 +9,9 @@ license = "MIT"
 # not just dependencies requied for lambda runtime
 [tool.poetry.dependencies]
 python = "^3.11.1"
-pytest = "^7.2"
-pytest-mock = "^3.10"
-pytest-cov = "^4.0"
 fastapi = "0.103.2"
 uvicorn = "0.23.2"
-pytest-asyncio = "^0.20"
 fastapi-utils = "^0.2.1"
-mypy = "0.991"
 python-ulid = "^1.1.0"
 boto3 = "^1.26.50"
 nats-py = "^2.2.0"
@@ -29,18 +24,22 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
-# formatting, linting
+pytest = "^7.2"
+pytest-mock = "^3.10"
+pytest-cov = "^4.0"
+pytest-dotenv = "^0.5.2"
+pytest-asyncio = "^0.20"
 black = "^22.1.0"
 flake8 = "^4.0.1"
-flake8-black = "0.3.6"
+flake8-black = "^0.3.3"
 flake8-builtins = "^1.5.3"
-flake8-comprehensions = "^3.7.0"
-flake8-debugger = "^4.0.0"
+flake8-comprehensions = "^3.10.0"
+flake8-debugger = "^4.1.2"
 flake8-fixme = "^1.1.1"
-flake8-isort = "^4.1.1"
-flake8-variables-names = "^0.0.4"
-isort = "^5.10.1"
-pre-commit = "^2.17.0"
+flake8-variables-names = "^0.0.5"
+isort = "^5.12.0"
+pre-commit = "^3.3.3"
+mypy = "1.4.1"
 types-setuptools = "^57.4.8"
 types-toml = "^0.10.3"
 types-redis = "^4.4.0"
