--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,92 +1,93 @@
 anyio==3.7.1 ; python_full_version >= "3.11.1" and python_version < "4.0"
 async-timeout==4.0.3 ; python_full_version >= "3.11.1" and python_full_version <= "3.11.2"
 black==22.12.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-boto3-stubs==1.28.68 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-boto3==1.28.68 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-botocore-stubs==1.31.68 ; python_full_version >= "3.11.1" and python_version < "4.0"
-botocore==1.31.68 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-certifi==2023.7.22 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-cffi==1.16.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
+boto3-stubs==1.34.65 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+boto3==1.34.65 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+botocore-stubs==1.34.65 ; python_full_version >= "3.11.1" and python_version < "4.0"
+botocore==1.34.65 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+certifi==2024.2.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+cffi==1.16.0 ; python_full_version >= "3.11.1" and python_version < "4.0" and platform_python_implementation != "PyPy"
 cfgv==3.4.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 click==8.1.7 ; python_full_version >= "3.11.1" and python_version < "4.0"
 cloudpickle==3.0.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-colorama==0.4.6 ; python_full_version >= "3.11.1" and python_version < "4.0" and sys_platform == "win32" or python_full_version >= "3.11.1" and python_version < "4.0" and platform_system == "Windows"
-coverage[toml]==7.3.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-cryptography==41.0.4 ; python_full_version >= "3.11.1" and python_version < "4.0"
-distlib==0.3.7 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-fakeredis==2.20.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
+colorama==0.4.6 ; python_full_version >= "3.11.1" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
+coverage[toml]==7.4.4 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+cryptography==42.0.5 ; python_full_version >= "3.11.1" and python_version < "4.0"
+distlib==0.3.8 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+fakeredis==2.21.3 ; python_full_version >= "3.11.1" and python_version < "4.0"
 fastapi-utils==0.2.1 ; python_full_version >= "3.11.1" and python_version < "4.0"
 fastapi==0.103.2 ; python_full_version >= "3.11.1" and python_version < "4.0"
-filelock==3.12.4 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+filelock==3.13.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 flake8-black==0.3.6 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 flake8-builtins==1.5.3 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 flake8-comprehensions==3.14.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 flake8-debugger==4.1.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 flake8-fixme==1.1.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-flake8-isort==4.2.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-flake8-variables-names==0.0.4 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+flake8-variables-names==0.0.5 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 flake8==4.0.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 gprof2dot==2022.7.29 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-greenlet==3.0.0 ; python_full_version >= "3.11.1" and platform_machine == "aarch64" and python_version < "4.0" or python_full_version >= "3.11.1" and platform_machine == "ppc64le" and python_version < "4.0" or python_full_version >= "3.11.1" and platform_machine == "x86_64" and python_version < "4.0" or python_full_version >= "3.11.1" and platform_machine == "amd64" and python_version < "4.0" or python_full_version >= "3.11.1" and platform_machine == "AMD64" and python_version < "4.0" or python_full_version >= "3.11.1" and platform_machine == "win32" and python_version < "4.0" or python_full_version >= "3.11.1" and platform_machine == "WIN32" and python_version < "4.0"
+greenlet==3.0.3 ; python_full_version >= "3.11.1" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and python_version < "4.0"
 h11==0.14.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-hiredis==2.2.3 ; python_full_version >= "3.11.1" and python_version < "4.0"
+hiredis==2.3.2 ; python_full_version >= "3.11.1" and python_version < "4.0"
 httpcore==0.16.3 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 httpx==0.23.3 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-identify==2.5.30 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-idna==3.4 ; python_full_version >= "3.11.1" and python_version < "4.0"
+identify==2.5.35 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+idna==3.6 ; python_full_version >= "3.11.1" and python_version < "4.0"
 iniconfig==2.0.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-isort==5.12.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-jinja2==3.1.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+isort==5.13.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+jinja2==3.1.3 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 jmespath==1.0.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 markdown-it-py==3.0.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-markupsafe==2.1.3 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+markupsafe==2.1.5 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 mccabe==0.6.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 mdurl==0.1.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 more-itertools==9.1.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
 mypy-extensions==1.0.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-mypy==0.991 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-nats-py==2.4.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+mypy==1.4.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+nats-py==2.7.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 nodeenv==1.8.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-packaging==23.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-pathspec==0.11.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-platformdirs==3.11.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-pluggy==1.3.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-pre-commit==2.21.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-psutil==5.9.6 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+packaging==24.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+pathspec==0.12.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+platformdirs==4.2.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+pluggy==1.4.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+pre-commit==3.6.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+psutil==5.9.8 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 pycodestyle==2.8.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-pycparser==2.21 ; python_full_version >= "3.11.1" and python_version < "4.0"
-pydantic==1.10.13 ; python_full_version >= "3.11.1" and python_version < "4.0"
+pycparser==2.21 ; python_full_version >= "3.11.1" and python_version < "4.0" and platform_python_implementation != "PyPy"
+pydantic==1.10.14 ; python_full_version >= "3.11.1" and python_version < "4.0"
 pyflakes==2.4.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-pygments==2.16.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-pynvml==11.4.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+pygments==2.17.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+pynvml==11.5.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 pytest-asyncio==0.20.3 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 pytest-cov==4.1.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+pytest-dotenv==0.5.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 pytest-mock==3.12.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-pytest==7.4.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-python-dateutil==2.8.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+pytest==7.4.4 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+python-dateutil==2.9.0.post0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+python-dotenv==1.0.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 python-ulid==1.1.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
 pyyaml==6.0.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 redis-om==0.2.1 ; python_full_version >= "3.11.1" and python_version < "4.0"
 redis==4.6.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
 rfc3986[idna2008]==1.5.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-rich==13.6.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-s3transfer==0.7.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-scalene==1.5.31.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-setuptools==68.2.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+rich==13.7.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+s3transfer==0.10.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+scalene==1.5.37 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+setuptools==69.2.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 six==1.16.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-sniffio==1.3.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
+sniffio==1.3.1 ; python_full_version >= "3.11.1" and python_version < "4.0"
 sortedcontainers==2.4.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
-sqlalchemy==1.4.49 ; python_full_version >= "3.11.1" and python_version < "4.0"
+sqlalchemy==1.4.52 ; python_full_version >= "3.11.1" and python_version < "4.0"
 starlette==0.27.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
-types-awscrt==0.19.3 ; python_full_version >= "3.11.1" and python_version < "4.0"
+types-awscrt==0.20.5 ; python_full_version >= "3.11.1" and python_version < "4.0"
 types-boto3==1.0.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-types-pyopenssl==23.2.0.2 ; python_full_version >= "3.11.1" and python_version < "4.0"
-types-redis==4.6.0.7 ; python_full_version >= "3.11.1" and python_version < "4.0"
-types-s3transfer==0.7.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
+types-pyopenssl==24.0.0.20240311 ; python_full_version >= "3.11.1" and python_version < "4.0"
+types-redis==4.6.0.20240311 ; python_full_version >= "3.11.1" and python_version < "4.0"
+types-s3transfer==0.10.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
 types-setuptools==57.4.18 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-types-toml==0.10.8.7 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-typing-extensions==4.8.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
-urllib3==2.0.7 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+types-toml==0.10.8.20240310 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+typing-extensions==4.10.0 ; python_full_version >= "3.11.1" and python_version < "4.0"
+urllib3==2.2.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
 uvicorn==0.23.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-virtualenv==20.24.5 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
-wheel==0.41.2 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+virtualenv==20.25.1 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
+wheel==0.43.0 ; python_full_version >= "3.11.1" and python_full_version < "4.0.0"
